force-app/main/default/objects/Tax_payed__c/Tax_payed__c.object-meta.xml
<CustomObject>
    <label>Tax paid per month</label>
    <nameField>
        <label>Tax payed Month</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax paid per months</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>