force-app/main/default/objects/Tax_payed__c/fields/tax_amount__c.field-meta.xml
<CustomField>
    <fullName>tax_amount__c</fullName>
    <label>tax amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>