force-app/main/default/objects/Tax_payed__c/fields/Tax_payer_detail__c.field-meta.xml
<CustomField>
    <fullName>Tax_payer_detail__c</fullName>
    <label>Tax payer detail</label>
    <referenceTo>Tax_payer__c</referenceTo>
    <relationshipLabel>Tax paid per months</relationshipLabel>
    <relationshipName>Tax_paid_per_months</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>