force-app/main/default/objects/Tax_payed__c/fields/year__c.field-meta.xml
<CustomField>
    <fullName>year__c</fullName>
    <label>year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>